# androidZ_lab

./: build.gradle
app/: build.gradle
app/src/main/rust/myrust/: Cargo.toml
