[package]
name = "myrust"
version = "0.1.0"
authors = ["none"]

[dependencies]
log = "0.4.17"
libc = "0.2.138"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.20.0"
ndk = {version = "0.7.0", features = ["trace"]}
#ndk = "0.7.0"
android_logger = "0.11.2"

[lib]
crate_type = ["staticlib", "dylib"]

[features]
default = ["foo"]
foo = []
bar = []